java-app-rollouts/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: java-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java-container
        image: java-app:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
  strategy:
    canary:
      steps:
      - setWeight: 50
      - pause: { duration: 30 } # pausa para validar a versão
