java-app-rollouts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-rollouts
spec:
  selector:
    app: java-app-rollouts
  ports:
  - port: 80
    targetPort: 8080
