java-app-rollouts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-rollouts
spec:
  rules:
  - host: java-app-rollouts.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-app-rollouts
            port:
              number: 80
